# gradviz

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: demo_mnist.py
gradviz/: __init__.py  __main__.py  core.py  hooks.py  plotting.py  utils.py
gradviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gradviz_logs/: mnist.csv
tests/: tests_smoke.py
